--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gradient Background"
+        android:text="Градиентная заливка"
         android:textSize="25sp"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
